# linear-tools

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml
src/linear_tools/: cli.py  project_query_parser.py  query_parser.py  utils.py
src/linear_tools/commands/: add_links.py  add_to_cycle.py  close_merged.py  comment.py  export_issues.py  export_projects.py  get_statistics.py  issue_history.py  merged_issues.py  sync_jira_metadata.py  to_jira.py
src/tools_shared/: __init__.py  logging.py
tests/: conftest.py  test_add_links.py  test_comment.py  test_export_projects.py  test_get_linear_statistics.py  test_issue_history.py  test_merged_issues.py  test_post_comment.py  test_query_parser.py  test_sync_jira_metadata.py  test_to_jira.py
