[project]
name = "linear-tools"
version = "0.1.0"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "typer>=0.27.0",
    "lark>=1.0.0",
]

[project.scripts]
linear = "linear_tools.cli:app"

[dependency-groups]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/linear_tools", "src/tools_shared"]
